--- a/soap/composer.json
+++ b/soap/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-      "ext-soap": "*"
+      "ext-soap": "*",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {"App\\": "App/"}
